#
# k2htpmdtor for K2HASH MULTI TRANSACTION PLUGIN.
#
# Copyright 2016 Yahoo Japan Corporation.
#
# K2HASH TRANSACTION PLUGIN is programmable I/F for processing
# transaction data from modifying K2HASH data.
#
# For the full copyright and license information, please view
# the license file that was distributed with this source code.
#
# AUTHOR:   Takeshi Nakatani
# CREATE:   Mon Dec 19 2016
# REVISION:
#

AUTOMAKE_OPTIONS = foreign no-dependencies

man_MANS = k2htpmdtor.3

EXTRA_DIST = $(man_MANS)

#
# VIM modelines
#
# vim:set ts=4 fenc=utf-8:
#
